# nu-wiki-mock-pdf-detail

./: .gitattributes  .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: data.rs  lib.rs  main.rs  pdf_detail.rs  pdf_list.rs
static/: data.json  index.html  pdf_detail.json  pdf_list.json
