[package]
name = "nu-wiki-mock-pdf-detail"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = "0.6.9"
serde = "1.0.152"
serde_json = "1.0.93"
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
sync_wrapper = "0.1.2"
tokio = { version = "^1.22.0", features = ["macros"] }
