[package]
name = "nu-wiki-mock-pdf-detail"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-static-folder = "0.12.0"
axum = "0.6.10"
shuttle-axum = "0.12.0"
shuttle-runtime = "0.12.0"
sync_wrapper = "0.1.2"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.26.0"
tower-http = { version = "0.4.0", features = ["fs"] }
